--- a/src/main/webapp/app/entities/personnels/personnels.component.html
+++ b/src/main/webapp/app/entities/personnels/personnels.component.html
@@ -1,3 +1,84 @@
-<p>
-  personnels works!
-</p>
+<jhi-critere-recherche>
+    
+</jhi-critere-recherche>
+
+<h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapSirhen"></h4>
+<div class="table-responsive">
+    <table class="table table-sm table-striped">
+        <thead class="thead-dark">
+            <tr>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.nom"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.prenom"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.identifiant"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.birthday"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.position"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauSirhen.libelle"></th>
+               
+            </tr>
+        </thead>
+
+        
+    </table>
+</div>
+<h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapEpp"></h4>
+<div class="table-responsive">
+    <table class="table table-sm table-striped">
+        <thead class="thead-dark">
+            <tr>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.nom"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.prenom"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.identifiant"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.birthday"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.position"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEpp.libelle"></th>
+               
+            </tr>
+        </thead>
+
+        
+    </table>
+</div>
+<h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapEppPrive"></h4>
+<div class="table-responsive">
+    <table class="table table-sm table-striped">
+        <thead class="thead-dark">
+            <tr>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.nom"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.prenom"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.identifiant"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.birthday"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.position"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauEppPrive.libelle"></th>
+               
+            </tr>
+        </thead>
+
+        
+    </table>
+</div>
+
+
+
+<h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></h4>
+<div class="table-responsive">
+    <table class="table table-sm table-striped">
+        <thead class="thead-dark">
+            <tr>
+                <th jhiTranslate="outilDiagnostic.personnel.ttableauAaf.nom"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.prenom"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.identifiant"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.birthday"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauAaf. identifiant"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.etablissement"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.fonction"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.ville"></th>
+                <th jhiTranslate="outilDiagnostic.personnel.tableauAaf.dicipline"></th>
+               
+            </tr>
+        </thead>
+
+        
+    </table>
+</div>
+
+
